# planto

./: pyproject.toml
planto/: manage.py
planto/planto/: asgi.py  settings.py  urls.py  wsgi.py
