[tool.poetry]
name = "backend"
version = "0.1.0"
description = ""
authors = ["mohamedsaeed <mohamed.saeed@bld.ai>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
django = "^4.1.6"
psycopg2 = "^2.9.5"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
